--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -3094,12 +3094,6 @@ div[class^='highlight'] td.code {
 
 .linenodiv pre {
   border-right: solid 1px #e6e9ea;
-  margin: 0;
-  padding: 12px 12px;
-  font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
-  font-size: 12px;
-  line-height: 1.5;
-  color: #d9d9d9;
 }
 
 div[class^='highlight'] pre {
